early/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: earlymini-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: early.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php5
                port:
                  number: 80
